# primate

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  primate.toml  release-plz.toml
.github/workflows/: ci.yml  docs.yml  publish-extensions.yml  release-plz.yml
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  introduction.md  roadmap.md
docs/src/cli/: build.md  fmt.md  lsp.md
docs/src/cookbook/: cross-namespace.md  enums.md  matrices.md
docs/src/editors/: vim.md  vscode.md  zed.md
docs/src/language/: attributes.md  declarations.md  formatting.md  overview.md  types.md  use.md  values.md
docs/src/plugins/: protocol.md  writing-a-generator.md
docs/src/reference/: changelog.md  diagnostics.md  grammar.md
docs/theme/: primate-hljs.js
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json  primate.schema.json  primate.tmLanguage.json  tsconfig.json
editors/zed/: Cargo.toml  README.md  extension.toml
examples/constants/: limits.prim  logging.prim  network.prim
rfc/: 0001-primate.txt  0002-primate-syntax.md  0003-tuples-arrays-use-wrapping.md  0004-regex-bytes-attributes-bounds.md
specs/: primate.md
src/: lib.rs  main.rs
src/cli/: mod.rs  skill.md  watch_tui.rs
src/config/: mod.rs
src/diagnostics/: mod.rs
src/formatter/: mod.rs
src/generators/: mod.rs  python.rs  rust.rs  typescript.rs
src/ir/: mod.rs
src/lsp/: mod.rs
src/parser/: ast.rs  grammar.rs  lexer.rs  lower.rs  mod.rs
src/plugin/: mod.rs
src/sourcemap/: mod.rs
src/types/: mod.rs
(+12 files in other folders)
